# mandarinets

./: .gitignore  LICENSE  README.md  appBuilder.ts  cli.ts  deps.ts  egg.json  mandarine-project-structure.ts  mandarine-properties.ts  mod.ts  openapi.yml  orange-test.json  plugin.ts  tsconfig.json
defaults/: app.ts  config.json
docs/: contributing.md  style_guide.md
examples/: example-1.ts  example-10.ts  example-11.ts  example-12.ts  example-13.ts  example-2.ts  example-3.ts  example-4.ts  example-5.ts  example-6.ts  example-7.ts  example-8.ts  example-9.ts  example-optional.ts  (+1 more)
rust-core/database/drivers/postgres/: .gitignore  Cargo.toml  README.md
rust-core/database/drivers/postgres/docs/web/pg-driver/: endpoints.json  menu-items.json
rust-core/database/drivers/postgres/docs/web/pg-driver/api/: pg-client.md  pg-manager.md  queryresult.md
rust-core/database/drivers/postgres/docs/web/pg-driver/getting-started/: installation.md  introduction.md
rust-core/database/drivers/postgres/docs/web/pgdriver/: endpoints.json
rust-core/database/drivers/postgres/src/: lib.rs  pg_interfaces.rs  pg_utils.rs  plugin_types.rs  types.rs  util.rs
rust-core/database/drivers/postgres/src/commands/: batch_execute.rs  connect.rs  execute.rs  execute_query.rs  mod.rs  prepared_statement_query.rs  query.rs
rust-core/database/drivers/postgres/src/types/: cidr.rs  circle.rs  interval.rs  line.rs  mod.rs  money.rs  pglsn.rs  types_utils.rs  unknown.rs
rust-core/database/drivers/postgres/ts-src/: commandTypes.ts  common.ts  lib.ts  mod.ts  pgClient.ts  pgManager.ts  queryResult.ts  rows.ts  utils.ts
(+449 files in other folders)
