[package]
name = "postgres"
version = "0.1.0"
authors = ["Andres Pirela"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.63.0"
serde_json = "1.0.52"
postgres = "0.17.5"
lazy_static = "1.4.0"
serde = "1.0.106"
mongodb =  "0.9.2" 
tokio-postgres = { version = "0.5.5", features = ["with-serde_json-1", "with-bit-vec-0_6", "with-geo-types-0_4", "with-chrono-0_4", "with-time-0_2"] }
futures = "0.3.6"
deadpool-postgres = "0.5.6"
tokio = { version = "0.2.22", features = ["full"] }
once_cell = "1.4.1"
serde_postgres = "0.2.0"
rust_decimal = { version = "1.8.1", features = [ "tokio-pg", "serde-float", "serde-bincode" ] }
diesel = { version = "1.4.5", features = ["postgres"] }
bytes = "0.5.6"
byteorder = "1.3.4"
bit-vec = "0.6"
geo-types = "0.4"
ipnetwork = { version = "0.17.0", features = ["serde"] }
chrono = "0.4"
time = "0.2.22"